2002-12-27  Paul Swartz <z3p@twistedmatrix.com>

	* bin/tkconch: initial commit of tkconch, a SSH client using Tkinter
	as a terminal emulator.

2002-12-25  Christmas Armstrong  <radix@twistedmatrix.com>

	* .: Releasing 1.0.2alpha1 - Merry Christmas!

2002-12-25  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/dict.py: dict client protocol implementation
	from Pavel "Pahan" Pergamenshchik (<pp64@cornell.edu>)

2002-12-23  Jp Calderone  <exarkun@twistedmatrix.com>

	* doc/examples/testdns.py and doc/examples/dns-service.py added as
	simple example of how to use new DNS client API.

2002-12-23  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/xmlrpc.py:  added XML RPC client support

2002-12-22  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/ssh/keys.py, twisted/conch/ssh/asn1.py: support for 
	writing	public and private keys.

	* bin/ckeygen: new script to create public/private key pairs

2002-12-22  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/dns.py: Support for AFSDB, RP, and SRV RRs
	added.

2002-12-18  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/persisted/dirdbm.py: copyTo and clear methods added
	to DirDBM class

2002-12-18  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/ssh/connection.py, twisted/test/test_conch: fixes to
	work on Python 2.1.

	* twisted/internet/process.py: usePTY now can be an optional tuple of
	(masterfd, slavefd, ttyname).

2002-12-18  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/rewrite.py: it works now, even when used as a rootish
	resource. Also, the request.path is massaged.

2002-12-13  Dave Peticolas  <dave@krondo.com>

	* twisted/enterprise/util.py: support numeric type

2002-12-13  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/client.py: add 301/302 support

2002-12-13  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_ftp.py: give client time to start up (fixes
	one test for gtk/gtk2 reactors)
